--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,17 +4,109 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="8dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".view.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/bill_amount_text_input_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/bill_amount_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/bill_amount_hint"
+            android:inputType="number" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/tip_percentage_text_input_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bill_amount_text_input_layout">
+
+        <EditText
+            android:id="@+id/tip_percentage_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/tip_percentage_hint"
+            android:inputType="number" />
+
+    </android.support.design.widget.TextInputLayout>
+
     <TextView
+        android:id="@+id/bill_amount_text_view"
+        style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toStartOf="@id/tip_amount_text_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tip_percentage_text_input_layout"
+        tools:text="$20.00" />
+
+    <TextView
+        android:id="@+id/bill_amount_label_text_view"
+        style="@style/TextAppearance.AppCompat.Medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/bill_label"
+        app:layout_constraintEnd_toEndOf="@id/bill_amount_text_view"
+        app:layout_constraintStart_toStartOf="@id/bill_amount_text_view"
+        app:layout_constraintTop_toBottomOf="@id/bill_amount_text_view" />
+
+    <TextView
+        android:id="@+id/tip_amount_text_view"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toStartOf="@id/grand_total_amount_text_view"
+        app:layout_constraintStart_toEndOf="@id/bill_amount_text_view"
+        app:layout_constraintTop_toBottomOf="@id/tip_percentage_text_input_layout"
+        tools:text="$1.50" />
+
+    <TextView
+        android:id="@+id/tip_amount_label_text_view"
+        style="@style/TextAppearance.AppCompat.Medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/tip_label"
+        app:layout_constraintEnd_toEndOf="@id/tip_amount_text_view"
+        app:layout_constraintStart_toStartOf="@id/tip_amount_text_view"
+        app:layout_constraintTop_toBottomOf="@id/tip_amount_text_view" />
+
+    <TextView
+        android:id="@+id/grand_total_amount_text_view"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tip_amount_text_view"
+        app:layout_constraintTop_toBottomOf="@id/tip_percentage_text_input_layout"
+        tools:text="$21.50" />
+
+    <TextView
+        android:id="@+id/grand_total_amount_label_text_view"
+        style="@style/TextAppearance.AppCompat.Medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/total_label"
+        app:layout_constraintEnd_toEndOf="@id/grand_total_amount_text_view"
+        app:layout_constraintStart_toStartOf="@id/grand_total_amount_text_view"
+        app:layout_constraintTop_toBottomOf="@id/grand_total_amount_text_view" />
 
 </android.support.constraint.ConstraintLayout>
